correct spacing bugs and responsiveness

--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,10 @@ body {
     padding-bottom: 4rem;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 @media (max-width: 768px) {
     body {
         padding-bottom: 10rem;
