--- a/src/styles/AudioPlayer.css
+++ b/src/styles/AudioPlayer.css
@@ -1,7 +1,7 @@
 /* Section container */
 
 .audio-player-section {
-    padding: 1rem 2rem;
+    padding: 2rem;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     justify-content: space-between;
@@ -135,6 +135,7 @@ html[data-theme="dark"] .audio-player-section {
     .audio-player-section {
         gap: 1rem;
         grid-template-columns: 1fr;
+        padding: 1.75rem;
     }
     .left-side-audio-section,
     .right-side-audio-section {
