--- a/src/styles/FavoritesPage.css
+++ b/src/styles/FavoritesPage.css
@@ -1,6 +1,6 @@
 .favorites {
     background-color: var(--very-light-gray-color);
-    padding: var(--large-padding);
+    padding: var(--large-padding) var(--large-padding) 4rem var(--large-padding);
     min-height: 90vh;
 }
 
