--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -1,5 +1,5 @@
 main {
     background-color: var(--very-light-gray-color);
-    padding: var(--normal-padding) var(--large-padding);
+    padding: var(--normal-padding) var(--large-padding) 4rem var(--large-padding);
     min-height: 90vh;
 }
